--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">ChineseStudy</string>
+    <string name="app_name">Better</string>
     <string name="hello_world">拼音表</string>
     <string name="pinyinbiao">拼音表</string>
     <string name="action_settings">Settings</string>
