--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,9 +4,11 @@
     <string name="app_name">Better</string>
     <string name="hello_world">拼音表</string>
     <string name="pinyinbiao">拼音表</string>
+    <string name="start_class">初级课程</string>
     <string name="action_settings">Settings</string>
     <string name="login">登  录</string>
     <string name="nologin">未登录</string>
     <string name="forget_pw">忘记密码？</string>
+    <string name="update_alert">更新</string>
 
 </resources>
